Add event and listener for account deletion and send email

--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -65,7 +65,7 @@
                     password</a></li>
                 <li class="px-4 pb-2">
                     <form th:method="delete" th:action="@{/users/close-account}">
-                        <button type="button" th:text="#{nav_delete_profile}"
+                        <button type="button" th:text="#{nav_delete_account}"
                                 onclick="if(confirm('Are you sure you want to close your account')) this.form.submit()">
                             Delete profile
                         </button>
