--- a/mail-sender/src/main/resources/templates/answer-to-question.html
+++ b/mail-sender/src/main/resources/templates/answer-to-question.html
@@ -4,54 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Question Has Been Answered</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            background-color: #ffffff;
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .header {
-            background-color: #007bff;
-            color: #ffffff;
-            padding: 10px;
-            text-align: center;
-            border-radius: 8px 8px 0 0;
-        }
-
-        .content {
-            margin: 20px 0;
-        }
-
-        .footer {
-            text-align: center;
-            margin: 20px 0;
-            font-size: 12px;
-            color: #777777;
-        }
-
-        .question, .answer {
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-
-        .meta {
-            font-size: 14px;
-            color: #555555;
-        }
-    </style>
 </head>
 <body>
 <div class="container">
@@ -59,7 +11,7 @@
         <h1>Your Question Has Been Answered</h1>
     </div>
     <div>
-        <p th:assert="${USERNAME != null}" th:text="${'Dear, ' + USERNAME}">Dear ,</p>
+        <p th:assert="${QUESTIONER_USERNAME != null}" th:text="${'Dear, ' + QUESTIONER_USERNAME}">Dear ,</p>
         <p>Your question has received a new answer!</p>
         <div>
             <strong th:assert="${QUESTION_NAME != null}"
@@ -67,15 +19,15 @@
             <br>
         </div>
         <div>
-            <strong th:assert="${ANSWER_USERNAME != null}"
-                    th:text="${'Answer from: ' + ANSWER_USERNAME}">Answer from: </strong>
+            <strong th:assert="${ANSWERER_USERNAME != null}"
+                    th:text="${'Answer from: ' + ANSWERER_USERNAME}">Answer from: </strong>
         </div>
         <div>
             <p>You can view answer on the site. </p>
         </div>
         <div>
             <p>
-                Link to question: <a th:assert="${QUESTION_LINK != null}" th:href="${QUESTION_LINK}"></a>
+                Link to question: <span th:assert="${QUESTION_LINK != null}" th:text="${QUESTION_LINK}"></span>
             </p>
         </div>
         <p>If you have any further questions or need additional help, feel free to reach out to our support team.</p>
