--- a/taskmaster/src/main/resources/templates/mail-history.html
+++ b/taskmaster/src/main/resources/templates/mail-history.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/fragments/head::head}"></head>
-<style>
-    .max-w-subject {
-        max-width: 200px;
-    }
-</style>
 <body class="mw-full">
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="container mx-auto min-h-screen px-12 py-12">
@@ -20,120 +15,89 @@
                     <option>Last 7 Days</option>
                     <option>Last 30 Days</option>
                 </select>
-                <select class="text-sm p-2 border rounded-lg">
-                    <option>Sort by Date</option>
-                    <option>Sort by Subject</option>
-                    <option>Sort by Sender</option>
-                    <option>Sort by Recipient</option>
+                <select onchange="sort('date', this.value)"
+                        class="px-4 py-2 pr-8 rounded-lg text-black  focus:outline-none focus:ring focus:ring-primary">
+                    <option th:selected="${sortDirection.equals('asc')}" value="asc">Newest First</option>
+                    <option th:selected="${sortDirection.equals('desc')}" value="desc">Oldest First</option>
                 </select>
             </div>
         </div>
         <table class="min-w-full leading-normal">
             <thead>
             <tr>
-                <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold max-w-subject">
-                    Subject
+                <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold">
+                    Template
                 </th>
                 <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold">Date</th>
                 <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold">From</th>
                 <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold">To</th>
-                <th class="px-5 py-3 bg-gray-200 text-gray-800 text-left text-sm uppercase font-semibold">Description
-                </th>
             </tr>
             </thead>
             <tbody>
+            <tr th:each="mailHistory : ${history.getContent()}" th:object="${mailHistory}">
+                <td th:text="*{template}" class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
+                </td>
+                <td th:text="*{date}" class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td th:text="*{from}" class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td th:text="*{to}" class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
+            </tr>
             <tr>
-                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate max-w-subject">Welcome to our
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
                     service
                 </td>
                 <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
                 <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
                 <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">Thank you for joining our platform...
+
+            </tr>
+            <tr>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
                 </td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
             </tr>
             <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">New User Registration</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 08:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">noreply@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">newuser@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Welcome to our platform!</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Admin User Registration</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 08:30</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">admin@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">adminuser@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Admin account created.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Add Task</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 09:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">task@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">New task added to the project.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Edit Task</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 10:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">task@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Task details updated.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Delete Task (User)</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 11:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">task@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Task deleted by user.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Delete Task (Admin)</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 11:30</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">admin@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">task@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Task deleted by admin.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Edit User Data</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 12:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">noreply@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">User information updated.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject ">Change Password</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap ">2024-07-16 12:30</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">noreply@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm ">Password changed successfully.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject text-center">Ask Question</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap text-center">2024-07-16 13:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">admin@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">User posted a question.</td>
-            </tr>
-            <!-- Add Answer to Question -->
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject text-center">Add Answer to Question</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap text-center">2024-07-16 14:00</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">admin@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-center">Answer posted to the question.</td>
-            </tr>
-            <tr>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm truncate max-w-subject">Password Reset
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
                 </td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm whitespace-nowrap">2024-07-15 09:45</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">support@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">user@example.com</td>
-                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">Click the link below to reset your
-                    password...
-                </td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
             </tr>
-            <!-- More rows as needed -->
+            <tr>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
+                </td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
+            </tr>
+            <tr>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
+                </td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
+            </tr>
+            <tr>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm truncate">Welcome to our
+                    service
+                </td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm whitespace-nowrap">2024-07-16 14:30</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">admin@example.com</td>
+                <td class="px-5 py-5 border-b border-gray-200  bg-white text-sm">user@example.com</td>
+
+            </tr>
+
             </tbody>
         </table>
         <div class="flex justify-end items-center gap-4 mt-6">
@@ -144,5 +108,6 @@
     </div>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
+<script th:src="@{js/pagingSortingAndFiltering.js}"></script>
 </body>
 </html>
