Finish how to show data about email history and how to get it

--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -37,10 +37,11 @@
         <li sec:authorize="hasRole('USER')"
             class="group text-base font-medium relative block">
             <p th:text="#{nav_admin}">Admin</p>
-            <ul th:classappend="${#locale.toString().equals('en_US')} ? 'left-[-38%]' : 'left-[-18%]'"
+            <ul th:classappend="${#locale.toString().equals('en_US')} ? 'left-[-38%]' : 'left-[-32%]'"
                 class=" group-hover:block hidden absolute bg-primary w-22 rounded-lg top-full">
                 <li class="px-4 py-2"><a th:text="#{nav_all_users}" th:href="@{/users}">All users</a></li>
                 <li class="px-4 pb-2"><a th:text="#{nav_statistics}" th:href="@{/statistics}">Statistics</a></li>
+                <li class="px-4 pb-2"><a th:text="#{nav_mail_history}" th:href="@{/mail-history}">Mail History</a></li>
             </ul>
         </li>
     </ul>
