--- a/taskmaster/src/main/resources/templates/questions.html
+++ b/taskmaster/src/main/resources/templates/questions.html
@@ -17,8 +17,8 @@
                    class="w-full md:w-64 px-4 py-2 rounded-lg  text-black focus:outline-none focus:ring focus:ring-primary"/>
             <select onchange="sort('createdTime', this.value)"
                     class="px-4 py-2 pr-8 rounded-lg text-black  focus:outline-none focus:ring focus:ring-primary">
-                <option th:selected="${sortDirection.equals('asc')}" value="asc">Newest First</option>
-                <option th:selected="${sortDirection.equals('desc')}" value="desc">Oldest First</option>
+                <option th:selected="${sortDirection.equals('desc')}" value="desc">Newest First</option>
+                <option th:selected="${sortDirection.equals('asc')}" value="asc">Oldest First</option>
             </select>
         </div>
     </div>
