--- a/taskmaster/src/main/resources/templates/mail-history.html
+++ b/taskmaster/src/main/resources/templates/mail-history.html
@@ -6,14 +6,15 @@
 <div class="container mx-auto min-h-screen px-12 py-12">
     <div class="">
         <div class="flex justify-between items-center mb-6">
-            <span class="text-lg text-gray-600">Emails sent today: <strong>5</strong></span>
+            <span class="text-lg text-gray-600">Emails sent today: <strong th:text="${history.totalElements}">5</strong></span>
             <h1 class="text-3xl font-bold text-center flex-grow">Mail History</h1>
             <div class="text-right flex items-center space-x-4">
-                <select class="text-sm p-2 border rounded-lg">
-                    <option>Today</option>
-                    <option>Yesterday</option>
-                    <option>Last 7 Days</option>
-                    <option>Last 30 Days</option>
+                <select onchange="filterHistoryFor(this.value)" class="text-sm p-2 pr-8 border rounded-lg">
+                    <option th:selected="${filterByDate.equals('today')}" value="today">Today</option>
+                    <option th:selected="${filterByDate.equals('yesterday')}" value="yesterday">Yesterday</option>
+                    <option th:selected="${filterByDate.equals('7-days')}" value="7-days">Last 7 Days</option>
+                    <option th:selected="${filterByDate.equals('30-days')}" value="30-days">Last 30 Days</option>
+                    <option th:selected="${filterByDate.equals('all')}" value="all">All</option>
                 </select>
                 <select onchange="sort('date', this.value)"
                         class="px-4 py-2 pr-8 rounded-lg text-black  focus:outline-none focus:ring focus:ring-primary">
@@ -51,7 +52,7 @@
             </tbody>
         </table>
         <div class="flex justify-end items-center gap-4 mt-6">
-            <button class="bg-red-500 mr-auto text-white px-4 py-2 rounded-lg hover:bg-red-600">Clear History</button>
+            <button class="bg-red-500 mr-auto text-white px-4 py-2 rounded-lg hover:bg-red-600">Clear All History</button>
             <button onclick="prevPage()" th:if="${!history.isFirst()}"
                     class="text-sm p-2 border rounded-lg bg-gray-200 hover:bg-gray-300">Previous
             </button>
@@ -63,5 +64,13 @@
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 <script th:src="@{js/pagingSortingAndFiltering.js}"></script>
+<script>
+    function filterHistoryFor(date) {
+        let url = getUrl();
+        url.searchParams.set('filterByDate', date);
+        reload(url);
+
+    }
+</script>
 </body>
 </html>
