--- a/taskmaster/src/main/resources/templates/mail-history.html
+++ b/taskmaster/src/main/resources/templates/mail-history.html
@@ -6,7 +6,8 @@
 <div class="container mx-auto min-h-screen px-12 py-12">
     <div class="">
         <div class="flex justify-between items-center mb-6">
-            <span class="text-lg text-gray-600">Emails sent today: <strong th:text="${history.totalElements}">5</strong></span>
+            <span class="text-lg text-gray-600">Emails sent for select period: <strong
+                    th:text="${history.totalElements}">5</strong></span>
             <h1 class="text-3xl font-bold text-center flex-grow">Mail History</h1>
             <div class="text-right flex items-center space-x-4">
                 <select onchange="filterHistoryFor(this.value)" class="text-sm p-2 pr-8 border rounded-lg">
@@ -52,7 +53,12 @@
             </tbody>
         </table>
         <div class="flex justify-end items-center gap-4 mt-6">
-            <button class="bg-red-500 mr-auto text-white px-4 py-2 rounded-lg hover:bg-red-600">Clear All History</button>
+            <form th:if="${hasHistory}" th:method="delete" th:action="@{/mail-history}"
+                  class="bg-red-500 mr-auto text-white px-4 py-2 rounded-lg hover:bg-red-600">
+                <button type="submit">
+                    Clear All History
+                </button>
+            </form>
             <button onclick="prevPage()" th:if="${!history.isFirst()}"
                     class="text-sm p-2 border rounded-lg bg-gray-200 hover:bg-gray-300">Previous
             </button>
@@ -69,7 +75,6 @@
         let url = getUrl();
         url.searchParams.set('filterByDate', date);
         reload(url);
-
     }
 </script>
 </body>
