--- a/taskmaster/src/main/resources/templates/add-task.html
+++ b/taskmaster/src/main/resources/templates/add-task.html
@@ -4,7 +4,7 @@
 <body class="bg-blue-500">
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class=" mt-4 mb-4 text-primary-foreground min-h-screen flex flex-col items-center justify-center">
-    <form th:action="@{/tasks/add-task}"
+    <form th:action="@{/tasks/add}"
           th:method="post"
           th:object="${addTaskData}"
           class="bg-card p-8 rounded-lg shadow-lg w-full max-w-xl">
