--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -19,7 +19,7 @@
     </label>
     <ul id="menu-links"
         class=" hidden z-10 md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
-        <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
+        <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add}"
                th:text="#{nav_add_task}"
                class="text-base font-medium hover:text-primary-700">Add Task</a></li>
         <li><a sec:authorize="isAuthenticated()" th:href="@{/questions/ask}"
