--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -36,7 +36,7 @@
                class="text-base font-medium hover:text-primary-700">Contacts</a></li>
         <li sec:authorize="hasRole('USER')"
             class="group text-base font-medium relative block">
-            <p th:text="#{nav_admin}">Admin</p>
+            <p sec:authorize="hasRole('ADMIN')" th:text="#{nav_admin}">Admin</p>
             <ul th:classappend="${#locale.toString().equals('en_US')} ? 'left-[-38%]' : 'left-[-32%]'"
                 class=" group-hover:block hidden absolute bg-primary w-22 rounded-lg top-full">
                 <li class="px-4 py-2"><a th:text="#{nav_all_users}" th:href="@{/users}">All users</a></li>
