--- a/taskmaster/src/main/resources/templates/objectNotFound.html
+++ b/taskmaster/src/main/resources/templates/objectNotFound.html
@@ -4,8 +4,9 @@
 <body>
 <div class="min-h-screen flex items-center justify-center bg-background">
     <div class="max-w-md p-4 bg-card rounded-lg shadow-md">
-        <h1 class="mb-4 text-3xl font-bold text-black">Question Not Found</h1>
-        <p class="text-lg text-muted-foreground">Sorry, we couldn't find the question you're looking for</p>
+        <h1 th:text="${#strings.capitalize(type) + ' Not Found'}" class="mb-4 text-3xl font-bold text-black">Object Not Found</h1>
+        <p th:text="${'Sorry, we could not  find the ' + #strings.toLowerCase(type) + ' you are looking for'}"
+           class="text-lg text-muted-foreground">Sorry, we couldn't find the object you're looking for</p>
         <div class="flex justify-between">
             <button class="bg-primary text-primary-foreground hover:bg-primary/80 py-2 px-4 rounded-lg mt-4"
                     onclick="history.back()">Go Back
